add reset.css / section ola

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 
 <head>
     <title>Joshua Almeida</title>
+    <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
-
+    <header id="header">
+        <i class="fa-solid fa-bars"></i>
+    </header>
+    <section id="ola">
+        <p class="ola_1">Olá, eu sou</p>
+        <h1 class="ola_2">Joshua Almeida</h1>
+        <h2 class="ola_3">Dev Front / Back</h2>
+        <p class="ola_4">Eu sou um engenheiro de software do Brasil atualmente focando em me tornar um dev fullstack de
+            qualidade capaz de criar experiencias digitais agradáveis.</p>
+    </section>
 </body>
+<script src="https://kit.fontawesome.com/e51fb0bf88.js" crossorigin="anonymous"></script>
 
 </html>
