Section olá pronta

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
     <title>Joshua Almeida</title>
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,12 +15,22 @@
     <header id="header">
         <i class="fa-solid fa-bars"></i>
     </header>
+    <div class="fixed-div">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 4</div>
+    </div>
     <section id="ola">
-        <p class="ola_1">Olá, eu sou</p>
-        <h1 class="ola_2">Joshua Almeida</h1>
-        <h2 class="ola_3">Dev Front / Back</h2>
-        <p class="ola_4">Eu sou um engenheiro de software do Brasil atualmente focando em me tornar um dev fullstack de
-            qualidade capaz de criar experiencias digitais agradáveis.</p>
+        <p class="ola_1 teko-font">Olá, eu sou</p>
+        <h1 class="ola_2 teko-font">Joshua Almeida</h1>
+        <h2 class="ola_3 monoton-regular">Dev Front / Back</h2>
+        <p class="ola_4 teko-font">Eu sou um engenheiro de software do Brasil atualmente focando em me tornar um dev<br>
+            fullstack de
+            qualidade capaz de criar experiencias digitais agradáveis.<br> Atualmente trabalho como analista de sistemas
+            na
+            RKM Sistemas</p>
+        <h3 class="ola_5 teko-font">Entre em contato comigo!</h3>
     </section>
 </body>
 <script src="https://kit.fontawesome.com/e51fb0bf88.js" crossorigin="anonymous"></script>
