Img add, começo da sobre mim

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Joshua Almeida</title>
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -13,24 +16,33 @@
 
 <body>
     <header id="header">
-        <i class="fa-solid fa-bars"></i>
     </header>
     <div class="fixed-div">
-        <div class="item">Item 1</div>
-        <div class="item">Item 2</div>
-        <div class="item">Item 3</div>
-        <div class="item">Item 4</div>
+        <i class="fa fa-github item"></i>
+        <i class="fa fa-linkedin-square item"></i>
+        <i class="fa-brands fa-x-twitter item"></i>
+        <i class="fa-brands fa-instagram item"></i>
     </div>
     <section id="ola">
         <p class="ola_1 teko-font">Olá, eu sou</p>
         <h1 class="ola_2 teko-font">Joshua Almeida</h1>
         <h2 class="ola_3 monoton-regular">Dev Front / Back</h2>
-        <p class="ola_4 teko-font">Eu sou um engenheiro de software do Brasil atualmente focando em me tornar um dev<br>
+        <p class="ola_4 teko-font">Eu sou um estudante de engenharia de software do Brasil atualmente focando em me<br>
+            tornar um dev
             fullstack de
             qualidade capaz de criar experiencias digitais agradáveis.<br> Atualmente trabalho como analista de sistemas
             na
             RKM Sistemas</p>
         <h3 class="ola_5 teko-font">Entre em contato comigo!</h3>
+    </section>
+    <section id="sobre">
+        <div class="sobre_card">
+            <div class="sobre_texthalf">
+                <h2 class="sobre_text1">Sobre mim</h2>
+                <p class="sobre_text2">Olá, eu me chamo Joshua eu sou do Brasil e eu adoro programar. Meu i</p>
+            </div>
+            <img class="sobre_img" src="imgjosma.jpg">
+        </div>
     </section>
 </body>
 <script src="https://kit.fontawesome.com/e51fb0bf88.js" crossorigin="anonymous"></script>
