add currículo / fim sobre

--- a/index.html
+++ b/index.html
@@ -38,8 +38,18 @@
     <section id="sobre">
         <div class="sobre_card">
             <div class="sobre_texthalf">
-                <h2 class="sobre_text1">Sobre mim</h2>
-                <p class="sobre_text2">Olá, eu me chamo Joshua eu sou do Brasil e eu adoro programar. Meu i</p>
+                <h2 class="sobre_text1 ola_3 monoton-regular">Sobre mim</h2>
+                <p class="sobre_text2 teko-font">Olá, eu me chamo Joshua, sou do Brasil e eu adoro
+                    programar.<br>Meu
+                    interesse
+                    na
+                    área se solidificou a partir de 2016 quando eu fiz meu<br>primeiro curso introdutório, desde então
+                    eu
+                    tenho me inserido na bolha dev.<br>Corta para hoje e eu trabalho na área tendo tido contato com
+                    várias
+                    tecnologias<br>inclusive as seguintes linguagens: JavaScript, PHP, Elixir, Python e Java</p>
+                <a href="Currículo_Joshua_07_24.pdf" download="Currículo_Joshua_07_24"
+                    class="sobre_curriculo monoton-regular">Meu Currículo</a>
             </div>
             <img class="sobre_img" src="imgjosma.jpg">
         </div>
