--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
             <img class="sobre_img" src="imgjosma.jpg">
         </div>
     </section>
+    <section id="skills">
+        <h2 class="skills_text1 ola_3 monoton-regular">Minhas Skills</h2>
+        <div class="skills_card">
+            <div class="skills_hard">
+                <h3 class="sobre_curriculo monoton-regular">Hard Skills</h3>
+            </div>
+            <div class="skill_soft">
+                <h3 class="sobre_curriculo monoton-regular">Soft Skills</h3>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="https://kit.fontawesome.com/e51fb0bf88.js" crossorigin="anonymous"></script>
 
