skills, agora é o contato e talvez exp

--- a/index.html
+++ b/index.html
@@ -57,20 +57,21 @@
     <section id="skills">
         <h2 class="skills_text1 ola_3 monoton-regular">Minhas Habilidades</h2>
         <div class="skills_card">
-            <div class="skills_hard">
+            <div class="skills_box">
                 <h3 class="sobre_curriculo monoton-regular">Hard Skills</h3>
-                <p class="skills_skills sobre_text2">HTML</p>
-                <p class="skills_skills sobre_text2">CSS</p>
-                <p class="skills_skills sobre_text2">JavaScript</p>
-                <p class="skills_skills sobre_text2">PHP</p>
-                <p class="skills_skills sobre_text2">Python</p>
+                <p class="skills_skills sobre_text2 teko-font">HTML</p>
+                <p class="skills_skills sobre_text2 teko-font">CSS</p>
+                <p class="skills_skills sobre_text2 teko-font">JavaScript</p>
+                <p class="skills_skills sobre_text2 teko-font">PHP</p>
+                <p class="skills_skills sobre_text2 teko-font">Python</p>
             </div>
-            <div class="skill_soft">
+            <div class="skills_box">
                 <h3 class="sobre_curriculo monoton-regular">Soft Skills</h3>
-                <p class="skills_skills sobre_text2">Comunicação</p>
-                <p class="skills_skills sobre_text2">Trabalho em Equipe</p>
-                <p class="skills_skills sobre_text2"></p>
-                <p class="skills_skills sobre_text2">Python</p>
+                <p class="skills_skills sobre_text2 teko-font">Comunicação</p>
+                <p class="skills_skills sobre_text2 teko-font">Trabalho em Equipe</p>
+                <p class="skills_skills sobre_text2 teko-font">Pensamento Lógico</p>
+                <p class="skills_skills sobre_text2 teko-font">Gerenciamento de Risco</p>
+                <p class="skills_skills sobre_text2 teko-font">Aprendizado Rápido</p>
             </div>
         </div>
     </section>
