--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
         </div>
     </section>
     <section id="contatos">
-        <h2 class="contatos_text1 ola_3 monoton-regular">Entre em Contato!</h2>
+        <h2 class="contatos_text1 ola_3 monoton-regular">Contato</h2>
         <div class="contato_form">
-            <h2>Contact Us</h2>
             <form action="send_mail.php" method="POST">
                 <label for="name">Name</label>
                 <input type="text" id="contato_name" name="name" required>
